[package]
name = "show-time"
version = "0.1.0"
authors = ["karaler <karaler@bytelang.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
"kplayer-rust-wrap" = "1.4.0"